
Changelog
=========

4.3.1 (unreleased)
------------------

- Order Memberships on date_from date by default.
  [phgross]

- Add memberhip_id column to membership table.
  [phgross]

- Extend meeting type views with corresonding watermark icon.
  [phgross]

- Extend meeting type links with corresonding icon.
  [phgross]

- Make sablon templates configurable on commitee-container. The following
  templates are available: Pre-protocol, protocol and excerpt.
  [deiferni]

- Made different SchemaMigration Upgradesteps more robust.
  [phgross]

- Customize CSRF confirmation page and add German translations.
  [lgraf]

- Added translations for the SearchBoxViewlet placeholder.
  [phgross]

- CSRF: always allow object annotations to be written.
  [jone, deiferni]

- Fix icons for the treeporlet favorite functionality.
  [phgross]

- Made DeactivatedFKConstraint compatible with newer alembic versions.
  [phgross]

- Fix submitting proposals that reference mails.
  [deiferni]

- Meeting: add editing protocols, creating/downloading/updating protocol documents.
  [deiferni]

- Examplecontent profile: Add french to the supported language.
  [phgross]

- Customize LanguageSelector viewlet to display it as a menu.
  [phgross]

- Fixed actor for all task activities.
  [phgross]

- Add initial notification support:

  - Added NotificationCenter including SQL representations for activitities, notifications, resource and watchers.
  - Added a feature flag to disable/enable notifications
  - Added notification viewlet which contains a badge icon and lists unread notifications
  - Added notifications overview with a MyNotification tab
  - Add mail notification dispatcher.

  [phgross]

- Implement migrating participants in DossierMigrator.
  [lgraf]

- Add DictstorageMigrator that migrates user IDs in dictstorage keys (in SQL).
  (to be used with ftw.usermigration).
  [lgraf]

- Add OGDSMigrator that migrates users and inbox groups in OGDS SQL tables