@@ -5,11 +5,19 @@ Changelog
 4.3.1 (unreleased)
 ------------------
 
-- Order Memberships on date_from date by default.
+- Optimize member and membership view:
+
+  - Added Membership listing to MemberView.
+  - Added Edit functionality for Memberships.
+  - Added Remove functionality for Memberships.
+  - Order Memberships on date_from date by default.
+  - Add memberhip_id column to membership table.
+
   [phgross]
 
-- Add memberhip_id column to membership table.
+- Extend meeting type views with corresonding watermark icon.
   [phgross]
+
 
 - Extend meeting type views with corresonding watermark icon.
   [phgross]
